--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,3 +5,13 @@
   <li>Actors:             <%= @movie.actors_by_age.pluck(:name).to_sentence%> 
   <li>Average Actor Age:  <%= @movie.actor_avg_age %> 
 </section>
+
+<h3> Add an Actor to Movie </h3>
+
+<%= form_tag movie_path(@movie.id) do %>
+  <%= label_tag :name, 'Name:' %>
+  <%= text_field_tag :name,  '', :required => true%><br>
+  <%= label_tag :age, 'Age:' %>
+  <%= text_field_tag :age, '', :required => true%><br>
+  <%= submit_tag 'Add' %>
+<% end %>
